# audio-transforms

./: .gitignore  README.md  demo.py  pyproject.toml  test_augment.py
notebooks/: demo.ipynb  dummy.ipynb  simple-tfm.ipynb
src/authtransforms/: __init__.py  pipeline.py  transforms.py  utils.py
